--- a/app/src/main/res/layout/activity_tour_detail.xml
+++ b/app/src/main/res/layout/activity_tour_detail.xml
@@ -22,6 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/tourCycler"
         android:layout_width="0dp"
         android:layout_height="453dp"
         android:layout_marginEnd="8dp"
@@ -29,7 +30,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
