--- a/app/src/main/res/layout/stop_view.xml
+++ b/app/src/main/res/layout/stop_view.xml
@@ -23,7 +23,7 @@
                 android:layout_marginLeft="4dp"
                 android:text="Caption"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="#ffffff" />
+                android:textColor="#000000" />
 
             <TextView
                 android:id="@+id/stopDescription"
@@ -33,7 +33,7 @@
                 android:layout_marginLeft="4dp"
                 android:text="Caption"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="#ffffff" />
+                android:textColor="#000000" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </FrameLayout>
