--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,12 +33,12 @@
         android:layout_height="54dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:onClick="enterTourCycling"
-        android:text="Touren"
+        android:layout_marginTop="16dp"
+        android:onClick="enterTourOverview"
+        android:text="Start Tour"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/LatitudeText" />
 
 </android.support.constraint.ConstraintLayout>
