--- a/app/src/main/res/layout/content_stop_detail.xml
+++ b/app/src/main/res/layout/content_stop_detail.xml
@@ -9,6 +9,7 @@
     tools:showIn="@layout/activity_stop_detail">
 
     <TextView
+        android:id="@+id/stopContentText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/text_margin"
