--- a/app/src/main/res/layout/activity_stop_detail.xml
+++ b/app/src/main/res/layout/activity_stop_detail.xml
@@ -32,15 +32,16 @@
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
 
+    <include layout="@layout/content_stop_detail" />
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_anchor="@id/app_bar"
-        app:layout_anchorGravity="bottom|end"
+        app:layout_anchor="@+id/app_bar"
+        app:layout_anchorGravity="center_vertical|right"
         app:srcCompat="@android:drawable/ic_dialog_email" />
-
-    <include layout="@layout/content_stop_detail" />
 
 </android.support.design.widget.CoordinatorLayout>
