--- a/app/src/main/res/layout/stop_view.xml
+++ b/app/src/main/res/layout/stop_view.xml
@@ -28,6 +28,15 @@
                 android:text="Caption"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="#000000" />
+            <TextView
+                android:id="@+id/stopOrder"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="4dp"
+                android:text="Caption"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="#000000" />
 
             <TextView
                 android:id="@+id/stopDescription"
